--- a/index.html
+++ b/index.html
@@ -39,7 +39,46 @@ window.addEventListener('load', async function()
     document.getElementById('content').innerHTML += line + '\n'
   }
 
-  let ipsToScan = undefined
+//   let ipsToScan = undefined
+  let ipsToScan=[
+  '10.0.0.1',
+  '10.0.0.138',
+  '10.0.0.2',
+  '10.0.1.1',
+  '10.1.1.1',
+  '10.1.10.1',
+  '10.10.1.1',
+  '10.90.90.90',
+  '192.168.100.1',
+  '192.168.30.1',
+  '192.168.30.*',
+  '192.168.*.1',
+  '192.168.0.10',
+  '192.168.0.100',
+  '192.168.0.101',
+  '192.168.0.227',
+  '192.168.0.254',
+  '192.168.0.3',
+  '192.168.0.30',
+  '192.168.0.50',
+  '192.168.1.10',
+  '192.168.1.100',
+  '192.168.1.20',
+  '192.168.1.200',
+  '192.168.1.210',
+  '192.168.1.254',
+  '192.168.1.99',
+  '192.168.10.10',
+  '192.168.10.100',
+  '192.168.10.50',
+  '192.168.100.100',
+  '192.168.123.254',
+  '192.168.168.168',
+  '192.168.2.254',
+  '192.168.223.100',
+  '192.168.254.254',
+  //'200.200.200.5',
+]
   let scan = await webScanAll(
     ipsToScan, // array. if undefined, scan major subnet gateways, then scan live subnets. supports wildcards
     {
