--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ window.addEventListener('load', async function()
   )
 
   log(JSON.stringify(scan, null, 2))
-  //log(`<b><span style='color: tomato;'>local IPs: ${scan.local.join(', ')}</span></b>`)
+  log(`<b><span style='color: tomato;'>local IPs: ${scan.local.join(', ')}</span></b>`)
 })
 </script>
 
